--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -216,6 +216,7 @@ main {
 footer {
     background-color: #fff8f3;
     padding: 130px 0;
+    margin-top: 110px;
 }
 .footer {
     max-width: 1140px;
